# brave-api

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
brave_api/: __init__.py  client.py  conversation.py  exceptions.py
brave_api/_crypto/: __init__.py  keys.py
brave_api/_data/: stopwords-en.json  stopwords-id.json
brave_api/_internal/: __init__.py  config.py  constants.py  models.py  token_extractor.py  types.py
brave_api/_search/: __init__.py  parser.py
brave_api/_streaming/: __init__.py  parser.py  result.py
brave_api/_transport/: __init__.py  http.py  retry.py  sveltekit.py
brave_api/mcp/: server.py  tools.py
examples/: ask_method.py  auto_tools_control.py  client_config.py  context_and_quote.py  context_manager_vs_manual.py  exception_handling.py  images_and_videos.py  inline_entities_and_citations.py  interactive_chat.py  language_override.py  mcp_server.py  multi_turn_conversation.py  multimodal_image_input.py  proxy-usage.py  quick_start.py  raw_events_inspection.py  search_method.py  stream_events.py  thinking_mode.py  web_results_and_urls.py
tests/: test_integration.py  test_mcp.py  test_refactoring.py  test_unit.py
